# ThunderKickStart

./: README.md  Thunder.code-workspace  thunder-core-development.xml  thunder-ml-development.xml  thunder-rdk-development.xml  thunder-remotes.xml
scripts/: prepare.sh
scripts/cmake/: CMakeLists.txt  cmake-environment.in
